--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="name">Name</string>
     <string name="submit">Submit</string>
     <string name="login">Login</string>
+    <string name="tutorial">Tutorial point</string>
 </resources>
