--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="submit">Submit</string>
     <string name="login">Login</string>
     <string name="tutorial">Tutorial point</string>
+    <string name="username">Username</string>
+    <string name="todo">TODO</string>
 </resources>
