--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Imam Finder</string>
     <string name="title_item_detail">Imam Detail</string>
     <string name="title_activity_main">MainActivity</string>
@@ -8,12 +8,12 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="menkContent">Mufti Menk in Kerlala</string>
-    <string name="upload">Upload Imam Image (Please select imam first)</string>
+    <string name="upload">Welcome, upload Imam Image (Please select imam first)</string>
     <string name="contentDescription">Upload Imam Image</string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="message">Message the imam</string>
-    <string name="salam">Salemwalkom rahamtulhi wa baraktu</string>
+    <string name="salam">Salemwalkom rahamtulhi wa baraktu, welcome</string>
     <string name="button">Button</string>
     <string name="verify_my_account">Verify</string>
     <string name="name">Name</string>
@@ -25,5 +25,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="text">Text</string>
-    <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="element_text">Hiring application</string>
+    <string name="sign_in_with_google">Welcome, sign in with Google</string>
 </resources>
