--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,7 @@
     <string name="enter_password">Enter password</string>
     <string name="profile_picture">Profile photo</string>
     <string name="select_image">SELECT IMAGE</string>
+    <string-array name="imams">
+        <item></item>
+        </string-array>
 </resources>
