--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="enter_password">Enter password</string>
     <string name="profile_picture">Profile photo</string>
     <string name="select_image">SELECT IMAGE</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
     <string-array name="imams">
         <item>Muhammad Khateeb</item>
         <item>Idris Alam</item>
