Added background for login page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="element_text">Hiring application</string>
     <string name="sign_in_with_google">Welcome, sign in with Google</string>
     <string name="cancel">Cancel</string>
-    <string name="textview">Welcome!</string>
+    <string name="textview"> </string>
     <string name="enter_name">Enter username</string>
     <string name="enter_password">Enter password</string>
     <string name="profile_picture">Profile photo</string>
