--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Imam Finder</string>
-    <string name="hint_word">Word...</string>
+    <string name="hint_word">Word…</string>
     <string name="button_save">Save</string>
+    <string name="imam_photo">Photo</string>
     <string name="empty_not_saved">Word not saved because it is empty.</string>
     <string name="add_word">Add word</string>
     <string name="title_item_detail">Imam Detail</string>
