Using vector drawables!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="textview_left">TextView left</string>
     <string name="textview_right">Textview right</string>
     <string name="sheikh">Sheikh</string>
+    <string name="photo_of_imam">Image of the imam</string>
     <string-array name="imams">
         <item>Muhammad Khateeb</item>
         <item>Idris Alam</item>
