--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Imam Finder</string>
+    <string name="imam_contact">Imam - Mohammed Mohammed : (503) 935-9491</string>
     <string name="hint_word">Word…</string>
     <string name="button_save">Save</string>
     <string name="imam_photo">Photo</string>
