--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Imam Finder</string>
-    <string name="imam_contact">Imam - Mohammed Mohammed : (503) 935-9491</string>
+    <string name="imam_contact">Imam – Mohammed Mohammed : (503) 935–9491</string>
     <string name="hint_word">Word…</string>
     <string name="button_save">Save</string>
+    <string name="code">Enter code</string>
+    <string name="verify">Send verification code</string>
+    <string name="phone">Enter Phone Number</string>
     <string name="imam_photo">Photo</string>
     <string name="empty_not_saved">Word not saved because it is empty.</string>
     <string name="add_word">Add word</string>
