Fixed hardcoded values!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,8 @@
     <string name="textview_right">Textview right</string>
     <string name="sheikh">Sheikh</string>
     <string name="photo_of_imam">Image of the imam</string>
+    <string name="hiring">Hiring</string>
+    <string name="todo">TODO</string>
     <string-array name="imams">
         <item>Muhammad Khateeb</item>
         <item>Idris Alam</item>
