--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="sheikh">Sheikh</string>
     <string name="photo_of_imam">Image of the imam</string>
     <string name="hiring">Hiring</string>
+    <string name="server_client_id">AIzaSyD_9laAyRVEMzExT-gAeq4YZAOEb_aI9-w</string>
     <string-array name="imams">
         <item>Muhammad Khateeb</item>
         <item>Idris Alam</item>
