--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,7 @@
     <string name="hello">Hello</string>
     <string name="send">Send</string>
     <string name="add_contact">Add contact</string>
+    <string name="title_chat_activity">Chat activity</string>
     <string-array name="imams">
         <item>Muhammad Khateeb</item>
         <item>Idris Alam</item>
