--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="verify_my_account">Verify</string>
     <string name="name">Name</string>
     <string name="submit">Submit</string>
+    <string name="enter_message">Enter message</string>
     <string name="login">Login</string>
     <string name="tutorial">Tutorial point</string>
     <string name="username">Username</string>
